Last corrections regarding i18n. Now to backend!

--- a/public/locales/pt-BR/common.json
+++ b/public/locales/pt-BR/common.json
@@ -4,6 +4,7 @@
   "navbar-link3": "Link 3",
   "usernav-file-manager": "Gerenciador",
   "usernav-settings": "Configurações",
+  "usernav-logout": "Sair",
   "footer-small-part1": "Feito exclusivamente para fins educacionais. Sem uso comercial. Construído por ",
   "footer-small-part2": " e NextJS, TypeScript, PostgreSQL, Prisma e MUITO café! "
 }
