--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,6 +4,7 @@
   "navbar-link3": "Link 3",
   "usernav-file-manager": "File Manager",
   "usernav-settings": "Settings",
+  "usernav-logout": "Logout",
   "footer-small-part1": "Made solely for educational purposes. No commercial use. Built by ",
   "footer-small-part2": " with NextJS, TypeScript, PostgreSQL, Prisma and LOTS of coffee! "
 }
