Added some UI improvements. Refactored code a bit by creating a new component: PopupMessage to show all error, loading and download messages.

--- a/public/locales/en/settingsoptions.json
+++ b/public/locales/en/settingsoptions.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Additional options",
+  "heading": "Preferences",
   "theme-selector": "Choose theme: ",
   "theme-light": "LIGHT",
   "theme-dark": "DARK",
