--- a/public/locales/pt-BR/settingsoptions.json
+++ b/public/locales/pt-BR/settingsoptions.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Opções adicionais",
+  "heading": "Preferências",
   "theme-selector": "Escolher tema: ",
   "theme-light": "CLARO",
   "theme-dark": "ESCURO",
