Fixed file deletion on Manager - now file is deleted properly.

--- a/public/locales/pt-BR/common.json
+++ b/public/locales/pt-BR/common.json
@@ -6,5 +6,5 @@
   "usernav-settings": "Configurações",
   "usernav-logout": "Sair",
   "footer-small-part1": "Feito exclusivamente para fins educacionais. Sem uso comercial. Construído por ",
-  "footer-small-part2": " e NextJS, TypeScript, PostgreSQL, Prisma e MUITO café! "
+  "footer-small-part2": " e NextJS, TypeScript, PostgreSQL, Prisma + MUITO café! "
 }
