--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,5 +6,5 @@
   "usernav-settings": "Settings",
   "usernav-logout": "Logout",
   "footer-small-part1": "Made solely for educational purposes. No commercial use. Built by ",
-  "footer-small-part2": " with NextJS, TypeScript, PostgreSQL, Prisma and LOTS of coffee! "
+  "footer-small-part2": " with NextJS, TypeScript, PostgreSQL, Prisma + LOTS of coffee! "
 }
