--- a/public/locales/en/settingsform.json
+++ b/public/locales/en/settingsform.json
@@ -5,5 +5,9 @@
   "placeholder-curr-pwd": "Current Password",
   "placeholder-new-pwd": "New Password",
   "placeholder-confirm-pwd": "Confirm New Password",
+  "title-curr-pwd-google-acc": "Please type your current password.",
+  "title-new-pwd-google-acc": "Choose a strong password with at least six characters.",
+  "title-pwd-confirm-google-acc": "Please confirm your new password by typing it again.",
+  "title-pwd-!google-acc": "You can not change your Google password.",
   "btn-form": "Save changes"
 }
