Rearchitected theme-context. Fixed some minor problems with language select. Created a new context which will be responsible for managing interface-related data. Still needs proper implementation.

--- a/public/locales/en/settingsoptions.json
+++ b/public/locales/en/settingsoptions.json
@@ -1,9 +1,9 @@
 {
   "heading": "Preferences",
-  "theme-selector": "Choose theme: ",
+  "theme-selector": "Theme: ",
   "theme-light": "LIGHT",
   "theme-dark": "DARK",
-  "language-selector": "Choose language: ",
+  "language-selector": "Language: ",
   "language-en": "EN",
   "language-ptbr": "PT",
   "upgrade-link": "Upgrade plans"
