Fixed preferred language not being applied when user logs in.

--- a/public/locales/en/settingsoptions.json
+++ b/public/locales/en/settingsoptions.json
@@ -6,5 +6,6 @@
   "language-selector": "Language: ",
   "language-en": "EN",
   "language-ptbr": "PT",
-  "upgrade-link": "Upgrade plans"
+  "upgrade-link": "Upgrade plans",
+  "delete-account": "Delete account"
 }
