--- a/public/locales/pt-BR/settingsoptions.json
+++ b/public/locales/pt-BR/settingsoptions.json
@@ -6,5 +6,6 @@
   "language-selector": "Idioma: ",
   "language-en": "EN",
   "language-ptbr": "PT",
-  "upgrade-link": "Planos de upgrade"
+  "upgrade-link": "Planos de upgrade",
+  "delete-account": "Remover conta"
 }
