--- a/public/locales/pt-BR/login.json
+++ b/public/locales/pt-BR/login.json
@@ -1,9 +1,4 @@
 {
   "heading": "Logar para sua conta no drive.",
-  "btn": "Continuar com Google",
-  "forgot-pwd-message-part1": "Esqueceu sua senha? ",
-  "forgot-pwd-link": "Clique aqui",
-  "forgot-pwd-message-part2": "e iremos te enviar um e-mail para recuperação.",
-  "signup-message": "Não tem uma conta? ",
-  "signup-link": "Clique aqui."
+  "btn": "Continuar com Google"
 }
